RESOLVED FIXED18909
REGRESSION (r31872-r31878): Viewed photos not closing completely at indycar.com
https://bugs.webkit.org/show_bug.cgi?id=18909
Summary REGRESSION (r31872-r31878): Viewed photos not closing completely at indycar.com
Jack Simon
Reported 2008-05-06 06:53:23 PDT
I am NOT a programmer so bear with me!! With both last night's build and the build from May 3rd I have noticed that when visiting the IndyCar site and viewing photos in either the Multimedia section or the Fan Photos section, if I click on a photo to enlarge it and view it, when I click on the "x" to close it the box disappears but the scroll bar and the photo itself will remain. The only way I can get out of it is to go back a page and start all over again. I went back to Safari 3.1.1 as downloaded from Apple and it responds normally. I have not attempted this on any other site.......Jack
Attachments
Reduction (686 bytes, text/html)
2008-05-07 12:11 PDT, mitz
no flags
mitz
Comment 1 2008-05-06 10:20:32 PDT
bisect-builds: Works: r31872 Fails: r31878
mitz
Comment 2 2008-05-06 10:21:35 PDT
mitz
Comment 3 2008-05-06 10:24:37 PDT
mitz
Comment 4 2008-05-07 12:11:57 PDT
Created attachment 21004 [details] Reduction
mitz
Comment 5 2008-05-07 13:48:51 PDT
mitz
Comment 6 2008-05-20 14:29:21 PDT
*** Bug 18881 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.