WebCore:

Reviewed by John Sullivan.

        - fix https://bugs.webkit.org/show_bug.cgi?id=18909
          <rdar://problem/5914165> REGRESSION (r31872-r31878): Viewed photos not closing completely at indycar.com

        Test: fast/dynamic/positioned-movement-with-positioned-children.html

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::layoutOnlyPositionedObjects): Cover the case of
        a positioned object that has only moved and has only positioned children
        that have changed.
        * rendering/RenderObject.h:
        (WebCore::RenderObject::needsPositionedMovementLayout): Added this
        accessor.

LayoutTests:

        Reviewed by John Sullivan.

        - test for https://bugs.webkit.org/show_bug.cgi?id=18909
          <rdar://problem/5914165> REGRESSION (r31872-r31878): Viewed photos not closing completely at indycar.com

        * fast/dynamic/positioned-movement-with-positioned-children.html: Added.
        * platform/mac/fast/dynamic/positioned-movement-with-positioned-children-expected.checksum: Added.
        * platform/mac/fast/dynamic/positioned-movement-with-positioned-children-expected.png: Added.
        * platform/mac/fast/dynamic/positioned-movement-with-positioned-children-expected.txt: Added.



Canonical link: https://commits.webkit.org/26169@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@32966 268f45cc-cd09-0410-ab3c-d52691b4dbfc